# handoff

./: CMakeLists.txt  README.md  flake.nix  main.cpp  packets.h  result
media/: mediacontroller.cpp  mediacontroller.h  pulseaudio.h
nix/: module.nix  package.nix
